# Archipelago

./: .gitignore  AdventureClient.py  BaseClasses.py  ChecksFinderClient.py  CommonClient.py  FF1Client.py  KH2DelilahClient.py  LICENSE  Launcher.py  LinksAwakeningClient.py  LttPAdjuster.py  MMBN3Client.py  Main.py  NetUtils.py  OoTAdjuster.py  OoTClient.py  README.md  SNIClient.py  TWWClient.py  UndertaleClient.py  Utils.py  WargrooveClient.py  Zelda1Client.py  build.ps1  chati-mod.py  hitman3-apworld-redesign.txt  inno_setup.iss  kvui.py  pyproject.toml  requirements.txt  settings.py  setup.py
.github/ISSUE_TEMPLATE/: feature_request.yaml
.github/workflows/: make_pyproject.yml  release.yml
.run/: Build APWorld.run.xml
WebHostLib/: downloads.py  misc.py  options.py  tracker.py
WebHostLib/templates/: generate.html  hostRoom.html  islandFooter.html  landing.html  legal.html  macros.html  pageWrapper.html  player-options.html  siteMap.html  stats.html  tutorial.html  tutorialLanding.html
data/: client.kv  options.yaml
data/lua/: banjo_tooie_connector.lua  connector_diddy_kong_racing.lua
docs/: CODEOWNERS  contributing.md
lib/: _dolphin_memory_engine.cp38-win_amd64.pyd
lib/dolphin_memory_engine/: _dolphin_memory_engine.cp311-win_amd64.pyd
worlds/: AutoWorld.py  Files.py  LauncherComponents.py
worlds/ahit/: Client.py  (+1 more)
worlds/chatipelago/: ItemName.py  Items.py  Options.py  Regions.py  Register.py  Rules.py  __init__.py  archipelago.json  pyproject.toml
worlds/chatipelago/docs/: en_Chatipelago.md
worlds/chatipelago/names/: ItemName.py  RegionName.py
(+747 files in other folders)
