[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "worlds.chatipelago"
version = "0.0.1"
description = "MultiWorld: Chatipelago"
classifiers = [ "Private :: Do Not Upload",]
requires-python = ">=3.12"
[[project.authors]]
name = "Delilah"

[[project.authors]]
name = "Dranzior"

[[project.authors]]
name = "LMarioza"

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "worlds.chatipelago",]
namespaces = true
